--- a/frontend_/package.json
+++ b/frontend_/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.0.2",
+    "cors": "^2.8.5",
+    "firebase": "^11.6.1",
+    "lucide-react": "^0.508.0",
     "node": "^22.15.0",
     "path-to-regexp": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.2"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.5.2",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
