--- a/frontend_/package.json
+++ b/frontend_/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.0.2",
+    "@toolpad/core": "^0.15.0",
     "cors": "^2.8.5",
     "firebase": "^11.6.1",
     "lucide-react": "^0.508.0",
