--- a/frontend_/package.json
+++ b/frontend_/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/joy": "^5.0.0-beta.52",
-    "@mui/material": "^7.0.2",
-    "@toolpad/core": "^0.15.0",
+    "@mui/material": "^7.1.1",
+    "@mui/system": "^7.1.1",
+    "@mui/x-data-grid": "^8.5.2",
+    "@mui/x-date-pickers": "^8.5.2",
+    "@toolpad/core": "^0.16.0",
     "cors": "^2.8.5",
     "firebase": "^11.6.1",
     "lucide-react": "^0.508.0",
