Search Seachection Updated

--- a/frontend_/.env
+++ b/frontend_/.env
@@ -1,2 +1,5 @@
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=f9d132ae26bb43e3bb3f509cddcd3acc
+REACT_APP_CHAT_SERVICE_URL=http://localhost:3001
+REACT_APP_TRIPMONK_API_URL=http://localhost:5000
+REACT_APP_EMBEDDING_SERVICE_URL=http://localhost:8000
