--- a/frontend_/package.json
+++ b/frontend_/package.json
@@ -18,6 +18,7 @@
     "@mui/system": "^7.1.1",
     "@mui/x-data-grid": "^8.5.2",
     "@mui/x-date-pickers": "^8.5.2",
+    "@nwpr/airport-codes": "^3.0.3",
     "@toolpad/core": "^0.16.0",
     "cors": "^2.8.5",
     "firebase": "^11.6.1",
